# photosorter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  workflow.yml
src/photosorter/: __init__.py  main.py  photo_handler.py  resnet_processor.py  sift_processor.py  terminal_interface.py
src/photosorter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
